package com.openim.common.im.bean.protbuf;

option java_outer_classname = "ProtobufLogoutMessage";

message LogoutMessage {
  optional string loginId = 1;
}